# paranoidFilteroid-effect-plugin

./: .gitignore  BUILD_COMPLETE.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  DOCUMENTATION_SESSION_COMPLETE.md  INSTALL_GUIDE.md  README.md  build_output.txt  commit-changes.bat  final-build.bat
Source/core/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: DSPChain.h  PassThrough.h  RadioFilter.h  TelephonyFilter.h
Source/utils/: DSPDefines.h
claude-instructions/: BUILD_GUIDE_GENERATION.md  CLAUDE_RULEBOOK.md  FUNCTIONALITY_PARAMETERS.md  PLANNING_AND_CHECKLIST.md  RESEARCH_GUIDE.md  VALIDATION_GUIDE.md
guides/: ACTION_PLAN.md  BUILD_PROGRESS.md  NEXT_STEPS.md  PHASE_7_PLAN.md  PHASE_9_PLAN.md  PHASE_9_QUICKSTART.md  PHASE_9_READINESS.md  PREREQUISITES.md  PROFESSIONAL_RECOMMENDATIONS.md  QUICKSTART.md  build_journal.md
reports/: IMPLEMENTATION_CHECKLIST.md  MINIMAL_SETUP_PLAN.md  PROFESSIONAL_RECOMMENDATIONS.md  RESEARCH_FINDINGS.md
